# wmavo

./: README.txt
api/: Doxyfile
doc/en/: INSTALL_LINUX.txt  README.txt  how_to_use_wiimote_in_avogadro.txt
doc/fr/: COMMENTFAIRE.txt  INSTALL_LINUX.txt  LISEZMOI.txt  install_linux.doc
extra/avogadro/last/: BEFORE_INSTALL.txt
extra/lib_win32/debug_old/: wiiuse.lib  wiiusecpp.lib
extra/wiiuse/example/: example.c
extra/wiiuse/example/msvc_2008/: wiiuseexample.vcproj
extra/wiiuse/example/msvc_2008/Debug/: BuildLog.htm  mt.dep  vc90.idb  wiiuseexample.ilk
extra/wiiuse/src/: Doxyfile~  classic.c  events.c  guitar_hero_3.c  ir.c  nunchuk.c  wiiuse  wiiuse.c  wiiuse.h
extra/wiiuse/src/msvc/: wiiuse.vcproj
extra/wiiuse/src/msvc/Debug/: BuildLog.htm  mt.dep  vc90.idb  wiiuse.exp  wiiuse.ilk  wiiuse.lib
extra/wiiuse/src/msvc_2008/Release/: BuildLog.htm
extra/wiiuse_wiiusecpp/lib_win32/: wiiuse.lib  wiiusecpp-0.12.3.lib  wiiusecpp.lib
extra/wiiuse_wiiusecpp/lib_win32/debug/: wiiuse.lib  wiiusecpp-0.12.3.lib  wiiusecpp.lib
extra/wiiuse_wiiusecpp/wiiuse/example/: example.c
extra/wiiuse_wiiusecpp/wiiuse/example/msvc_2008/: wiiuseexample.sln  wiiuseexample.vcproj
extra/wiiuse_wiiusecpp/wiiuse/src/: Makefile  classic.c  events.c  guitar_hero_3.c  ir.c  nunchuk.c  wiiuse.c  wiiuse.h  wiiuse_internal.h
extra/wiiuse_wiiusecpp/wiiuse/src/msvc_2008/: wiiuse.sln  wiiuse.vcproj
extra/wiiuse_wiiusecpp/wiiusecpp/example/: example.cpp
extra/wiiuse_wiiusecpp/wiiusecpp/example/msvc_2008/: wiiusecpp_example.sln  wiiusecpp_example.vcproj
extra/wiiuse_wiiusecpp/wiiusecpp/example_qt/src/: example_qt.pro  extension.cpp  extension.h  glwidget.cpp  glwidget.h  main.cpp  wiimote.cpp  wiimote.h  wiimotedata_share.cpp  wiimotedata_share.h  window.cpp  window.h
extra/wiiuse_wiiusecpp/wiiusecpp/example_qt/src/shared/: qthread_ex.h  test.h  wiwo.h
extra/wiiuse_wiiusecpp/wiiusecpp/src/: Makefile  wiiusecpp.cpp  wiiusecpp.h  wiiusecppdata.cpp  wiiusecppdata.h
extra/wiiuse_wiiusecpp/wiiusecpp/src/msvc_2008/: wiiusecpp.vcproj
extra/wiiusecpp/example/: example.cpp
extra/wiiusecpp/src/: Doxyfile~  Makefile  wiiusecpp.cpp  wiiusecpp.h
extra/wiiusecpp/src/msvc_2008/: wiiusecpp.sln  wiiusecpp.vcproj
extra/wiiusecpp/src/msvc_2008/Release/: BuildLog.htm
img/fragments/cml/: bromine.cml  chlorine.cml  iodine.cml  methane.cml  methyl.cml  methyl2.cml  metoxy.cml  nitrogen dioxyde.cml
img/fragments/cml/alcohols/: alcohol.cml  alcohol2.cml
img/fragments/cml/alkynes/: acetylene.cml
img/fragments/cml/amines/: amine.cml
img/fragments/cml/thiols/: thiol.cml
script/: 1_dependency.sh  2_compile_install.sh  README.txt  compile_install.sh  version_avo.sh
src/: doxygenbug.h  revision.h  variousfeatures.h  warning_disable_begin.h  warning_disable_end.h  wmavo_const.h
src/en/: CMakeLists.txt
src/en/src/: wmengine.cpp  wmengine.h
src/ex/: CMakeLists.txt  revision.h  revision.h.in
src/ex/cmake/: CMakeLists_debug.txt  CMakeLists_release.txt
src/ex/src/: contextmenu_to_avoaction.cpp  contextmenu_to_avoaction.h  wmavo.cpp  wmavo.h  wmavo.inl  wmavo_rumble.cpp  wmavo_rumble.h  wmavo_thread.cpp  wmavo_thread.h  wmextension.cpp  wmextension.h  wrapper_chemicalcmd_to_avoaction.cpp  wrapper_chemicalcmd_to_avoaction.h
src/ex/src/avo_toolbox/: constraintsmodel.h.unused  moleculemanipulation.cpp  moleculemanipulation.h  undocommand.h.unused
src/ex/src/qt_extended/: qaction_ex.cpp  qaction_ex.h  qmenu_ex.h
src/ex/src/toolbox/: wiwo.h
src/ex/src/tools/: action_modified.cpp  action_modified.h  context_menu.cpp  context_menu.h  qundo_ex.h  wiwo.h
src/ex/src/undo_command/: undocommand.cpp  undocommand.h
src/tool/: CMakeLists.txt  README_CMAKE.txt
src/tool/src/: contextmenueater.cpp.unused  contextmenueater.h.unused  settingswidget.cpp  settingswidget.h  wmtool.cpp  wmtool.h  wmtool.qrc
src/tool/src/avo_toolbox/: moleculemanipulation.cpp  moleculemanipulation.h  settingswidget.cpp  settingswidget.h  undocommand.cpp.unused
src/tool/src/inputdevice/: inputdevice.cpp  inputdevice.h  wmdevice.cpp  wmdevice.h
src/tool/src/inputdevice/wiimote/: wmrumble.cpp  wmrumble.h  wmtochem.cpp  wmtochem.h  wmtochem.inl
src/tool/src/qt_extended/: qmenu_ex.cpp  qthread_ex.cpp  qthread_ex.h  qundo_ex.h
src/tool/src/rendering/: distanceanglediedre.cpp  distanceanglediedre.h  drawobject.cpp  drawobject.h  drawsimpleobject.cpp  drawsimpleobject.h  rendertext.cpp  rendertext.h
src/tool/src/toolbox/: wiwo.cpp  wiwo.h  wiwo_sem.cpp  wiwo_sem.h
src/tool/src/wrapper/: chemicalwrapper.cpp  chemicalwrapper.h  wrapper.cpp  wrapper.h
src/tool/src/wrapper/chemical/: contextmenu_to_avoaction.cpp  contextmenu_to_avoaction.h  wrapper_chemicalcmd_to_avoaction.cpp  wrapper_chemicalcmd_to_avoaction.h
